samples/_failures_safe/1761659225_7ffd81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a7d33ee.c: In function ‘print_token’:
./samples/SAFE/__tmp_4a7d33ee.c:160:20: error: missing terminating " character
  160 |             printf("EOF
      |                    ^~~~
./samples/SAFE/__tmp_4a7d33ee.c:160:13: error: expected expression at end of input
  160 |             printf("EOF
      |             ^~~~~~
./samples/SAFE/__tmp_4a7d33ee.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4a7d33ee.c:160:13: error: expected declaration or statement at end of input
